<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MovieDetailsActivity">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="#099b8f">

            <TextView
                android:id="@+id/movieName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/movie_name"
                android:textColor="@color/colorText"
                android:textSize="32sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/moviePoster"
                android:layout_width="140dp"
                android:layout_height="210dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_margin="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/movieYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/moviePoster"
                android:singleLine="false"
                android:text="@string/year"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="10pt" />

            <TextView
                android:id="@+id/movieDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieYear"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/moviePoster"
                android:text="@string/duration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="italic" />


            <TextView
                android:id="@+id/movieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieDuration"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/moviePoster"
                android:text="@string/rating"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/movieFav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/movieRating"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/moviePoster"
                android:background="@color/colorAccentLight"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:src="@android:drawable/btn_star"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/movieOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:singleLine="false"
            android:text="@string/overview" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/trailers"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>